# rust-webserver

./: .gitignore  Cargo.toml  README.md  config.conf
cert/: create.sh  intermediate.conf  leaf.conf  leaf_req.conf  root.conf
defaultpath/: 403.html
defaultpath/http/: index.html
defaultpath/https/: form.html  form_handler.php  index.html  restrict1.html  restrict2.html  restrict3.html
src/: lib.rs  main.rs  method.rs  mod.rs  status.rs
src/rustwebserver/: cache.rs  config.rs  core.rs  defaultfields.rs  defaultmethods.rs  file.rs  handler.rs  httpengine.rs  mod.rs  proxy.rs  request.rs  response.rs  thread.rs
src/rustwebserver/http/: fields.rs  method.rs  mod.rs  status.rs  uri.rs
